k8s/overlays/prod/tolgee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tolgee-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: tolgee.school-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tolgee
            port:
              number: 80
